--- a/Level 1/Task 3 Calculator/style.css
+++ b/Level 1/Task 3 Calculator/style.css
@@ -12,7 +12,7 @@ height: 100vh;
 display: flex;
 align-items: center;
 justify-content: center;
-background: linear-gradient(90deg, rgba(238,174,202,1) 0%, rgba(148,187,233,0.12529002320185612) 100%);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(255,0,151,1) 100%);
 }
 
 .container {
